--- a/o/or/ore/oregonlive.com.html
+++ b/o/or/ore/oregonlive.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the oregonlive.com privacy policy that was archived on 2005-12-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051218141312id_/http%3A//www.oregonlive.com/privacypolicy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the oregonlive.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615032051id_/http%3A//www.oregonlive.com/privacypolicy) for the most accurate reproduction.-->
 
 <html><head>
 <title>OregonLive.com: Privacy Policy</title>
@@ -9,6 +9,9 @@ function POP(u,n,w,h,f){windowFeatures = "width="+w+",height="+h;if (f) windowFe
 </script>
 
 <script language="javascript" src="http://www.oregonlive.com/dhtml/stats/track/vsfunctions.js"></script>
+<script language="javascript" src="http://www.oregonlive.com/dhtml/stats/track/vssetup.js"></script>
+<script language="JavaScript">var tcdacmd="dt";</script>
+<script src="http://an.tacoda.net/an/12325/slf.js" language="JavaScript"></script>
 </head>
 
 <body bgcolor="#FFFFFF" link="#0033CC" vlink="#02618A">
@@ -21,7 +24,6 @@ OAS_listpos = 'BannerTop,Popup,Sponsor1,SponsorLeft,SponsorRight,Tile1,TxtLink1,
 OAS_query = 'NULL';
 OAS_target = '_top'; //end of configuration
 </script>
-
 <script language="JavaScript">
 <!-- -->
 OAS_version = 10;
@@ -41,7 +43,7 @@ if (navigator.userAgent.indexOf('Mozilla/3') != -1 || navigator.userAgent.indexO
 if (OAS_version >= 11)
   document.write('<SCRIPT LANGUAGE=JavaScript1.1 SR' + 'C="' + OAS_url + 'adstream_mjx.ads/' + OAS_sitepage + '/1' + OAS_rns + '@' + OAS_listpos + '?' + OAS_query + '"><\/SCRIPT>');
 //-->
-</script><script language="JavaScript1.1" src="http://ads.oregonlive.com/RealMedia/ads/adstream_mjx.ads/www.oregonlive.com/privacypolicy/index.ssf/1487642210@BannerTop,Popup,Sponsor1,SponsorLeft,SponsorRight,Tile1,TxtLink1,TxtLink2,TxtLink3?NULL"></script>
+</script><script language="JavaScript1.1" src="http://ads.oregonlive.com/RealMedia/ads/adstream_mjx.ads/www.oregonlive.com/privacypolicy/index.ssf/1446686524@BannerTop,Popup,Sponsor1,SponsorLeft,SponsorRight,Tile1,TxtLink1,TxtLink2,TxtLink3?NULL"></script>
 <script language="JavaScript">
 <!-- -->
 document.write('');
@@ -92,7 +94,7 @@ OAS_AD('BannerTop');
 <td width="335" colspan="5"><img src="http://www.oregonlive.com/images/spacer.gif" width="1" height="1" vspace="2"></td>
 </tr>
 <tr valign="middle">
-<td width="1"><form action="/search/index.ssf" method="get"><input type="hidden" name="sconfig" value="olive"><input type="hidden" name="xpath.attraction_type" value="-EXCLUDE -exclude -zzz"><input type="hidden" name="xpath.pubdate" value="12/18/05 12/17/05 12/16/05 12/15/05 12/14/05 12/13/05 12/12/05 12/11/05 12/10/05 12/09/05 12/08/05 12/07/05 12/06/05 12/05/05"><input type="hidden" size="2" name="count" value="20"><img src="http://www.oregonlive.com/images/spacer.gif" width="1" height="1"></form></td>
+<td width="1"><form action="/search/index.ssf" method="get"><input type="hidden" name="sconfig" value="olive"><input type="hidden" name="xpath.attraction_type" value="-EXCLUDE -exclude -zzz"><input type="hidden" name="xpath.pubdate" value="06/14/06 06/13/06 06/12/06 06/11/06 06/10/06 06/09/06 06/08/06 06/07/06 06/06/06 06/05/06 06/04/06 06/03/06 06/02/06 06/01/06"><input type="hidden" size="2" name="count" value="20"><img src="http://www.oregonlive.com/images/spacer.gif" width="1" height="1"></form></td>
 <td width="85" align="right"><img src="http://www.oregonlive.com/images/toprail/arrow.gif" width="14" height="10">&nbsp;<font face="arial,sans-serif" size="2" color="#FBBB7A"><a href="/search/"><font color="#FABA7A"><b>SEARCH</b></font></a></font><img src="http://www.oregonlive.com/images/spacer.gif" width="1" height="1" hspace="2"></td>
 <td width="145"><select name="xref">
 <option value="7">The Oregonian
@@ -114,35 +116,22 @@ OAS_AD('BannerTop');
 <td width="335" colspan="5"><img src="http://www.oregonlive.com/images/spacer.gif" width="1" height="1" vspace="2"></td>
 </tr>
 </tbody></table><img src="http://www.oregonlive.com/images/spacer.gif" width="1" height="1" vspace="13"><br>
-
-
-
 <table width="763" border="0" cellspacing="0" cellpadding="0">
- <tbody><tr valign="top">
-	<td width="428"><img src="/images/spacer.gif" width="428" height="5"><br><font face="arial,sans-serif" size="2">
-
-		<img src="/images/aboutus/aboutus_masthead.gif" width="123" height="41"><br>
-		<img src="/images/aboutus/aboutus_rule.gif" width="428" height="1" vspace="3"><br>
-
-		<center><font size="5"><b>Privacy Policy</b></font></center><p>
-
-		Last Revised <b>August 15, 2002</b></p><p>
-
-		<a href="#kidsandparents">Kids and parents click here!</a></p><p>
-
-		In addition to reviewing this privacy policy, please read our <a href="/useragreement/">User Agreement</a>. Your use of <b>OREGONLIVE.COM</b> constitutes agreement to its terms and conditions.</p><p>
-
-		<b>OREGONLIVE.COM</b> is produced by <b>OREGON LIVE</b>. This policy does not cover information collected on sites linked to from <b>OREGONLIVE.COM</b>.</p><p>
-
-		This Privacy Policy may be modified from time to time; the date of the most recent revisions will appear on this page, so check back often.  Continued access of <b>OREGONLIVE.COM</b> by you will constitute your acceptance of any changes or revisions to the Privacy Policy.</p><p>
-
-		It is the goal of <b>OREGONLIVE.COM</b> to bring you information that is tailored to your individual needs and, at the same time, protect your privacy. The following is a summary of the various ways we treat the information you provide us while using our site.</p><p>
-
-		<b>THE TYPE OF INFORMATION <b>OREGONLIVE.COM</b> COLLECTS</b></p><p>
-		<b>OREGONLIVE.COM</b> generally collects personally identifying information with your specific knowledge and consent. For instance, when you enter a sweepstakes or contest, complete a survey, make a purchase, subscribe to our newspapers, or register for any portion of our services, you are asked to provide information such as your e-mail address, name or phone number. Optional information such as your age or gender may also be requested.</p><p>
-
-		<b>HOW <b>OREGONLIVE.COM</b> USES INFORMATION PROVIDED BY YOU</b></p><p>
-		<b>OREGONLIVE.COM</b> uses this information to provide you with the service you have requested. For example, if you subscribe to any of our newspapers, we may use your e-mail address to send you a confirmation notice and your mailing address to send you your newspaper. Similarly, if you enter an online sweepstakes, we will use this information to notify you if you are a winner. We may also use the information to communicate with you about new features, products or services, or to improve the services that we offer by tailoring them to your needs.</p><p>
+<tbody><tr valign="top">
+<td width="428"><img src="/images/spacer.gif" width="428" height="5"><br><font face="arial,sans-serif" size="2">
+<img src="/images/aboutus/aboutus_masthead.gif" width="123" height="41"><br>
+<img src="/images/aboutus/aboutus_rule.gif" width="428" height="1" vspace="3"><br>
+<center><font size="5"><b>Privacy Policy</b></font></center><p>
+Last Revised <b>August 15, 2002</b></p><p>
+<a href="#kidsandparents">Kids and parents click here!</a></p><p>
+In addition to reviewing this privacy policy, please read our <a href="/useragreement/">User Agreement</a>. Your use of <b>OREGONLIVE.COM</b> constitutes agreement to its terms and conditions.</p><p>
+<b>OREGONLIVE.COM</b> is produced by <b>OREGON LIVE</b>. This policy does not cover information collected on sites linked to from <b>OREGONLIVE.COM</b>.</p><p>
+This Privacy Policy may be modified from time to time; the date of the most recent revisions will appear on this page, so check back often. Continued access of <b>OREGONLIVE.COM</b> by you will constitute your acceptance of any changes or revisions to the Privacy Policy.</p><p>
+It is the goal of <b>OREGONLIVE.COM</b> to bring you information that is tailored to your individual needs and, at the same time, protect your privacy. The following is a summary of the various ways we treat the information you provide us while using our site.</p><p>
+<b>THE TYPE OF INFORMATION <b>OREGONLIVE.COM</b> COLLECTS</b></p><p>
+<b>OREGONLIVE.COM</b> generally collects personally identifying information with your specific knowledge and consent. For instance, when you enter a sweepstakes or contest, complete a survey, make a purchase, subscribe to our newspapers, or register for any portion of our services, you are asked to provide information such as your e-mail address, name or phone number. Optional information such as your age or gender may also be requested.</p><p>
+<b>HOW <b>OREGONLIVE.COM</b> USES INFORMATION PROVIDED BY YOU</b></p><p>
+<b>OREGONLIVE.COM</b> uses this information to provide you with the service you have requested. For example, if you subscribe to any of our newspapers, we may use your e-mail address to send you a confirmation notice and your mailing address to send you your newspaper. Similarly, if you enter an online sweepstakes, we will use this information to notify you if you are a winner. We may also use the information to communicate with you about new features, products or services, or to improve the services that we offer by tailoring them to your needs.</p><p>
 <b>OREGONLIVE.COM</b> does not sell our users' e-mail addresses. However, unless otherwise specified, we may share e-mail addresses and sell or share all other information with our affiliates and with carefully selected companies who we think can offer you services and products of interest to you. If you do not wish to have your information shared, <a href="/contactus/">write to us</a>. If you do not wish to receive communications from us, simply follow the unsubscribe instructions contained within the e-mail. If you've registered on any part of <b>OREGONLIVE.COM</b>, you may also change or update your member preferences or information within any section of the site where you have signed up, registered or created any type of account.</p><p>
 We also allow access to our database by third parties that provide us with services, such as technical maintenance or forums and job search software, but only for the purpose of and to the extent necessary to provide those services. And if you choose to purchase items through features on our site, we may forward your information to third parties for services such as credit card processing and order fulfillment. There are also times when you provide information about yourself to us in areas of the site that are managed or participated in by third parties, such as our auction services or shopping areas. In such cases, the information may be used by us and by such third party(ies), each pursuant to its own policies. We may also provide your information to our advertisers, so that they can serve ads to you that meet your needs or match your interests. While <b>OREGONLIVE.COM</b> will seek to require such third parties to follow appropriate privacy policies and will not authorize them to use this information except for the express purpose for which it is provided, <b>OREGONLIVE.COM</b> does not bear any responsibility for any actions or policies of third parties. There may also be occasion when we are legally required to provide access to our database in order to cooperate with police investigations or other legal proceedings. In those instances, the information is provided only for that purpose.</p><p>
 <b>COOKIES</b></p><p>
@@ -192,7 +181,8 @@ OAS_AD('SponsorRight');
 <td width="195" bgcolor="#EAEAEA" align="center">
 <img src="/images/spacer.gif" width="1" height="2" vspace="71" hspace="50"><br>
 <table width="190" border="0" cellspacing="2" cellpadding="3">
-<tbody><tr valign="middle"><td width="190" bgcolor="#E3FEF0"><font color="#000000">»</font> <a href="http://www.oregonlive.com/contests/pioneerplace/">Bling in the New Year- Enter Here!</a><br></td></tr>
+<tbody><tr valign="middle"><td width="190" bgcolor="#E3FEF0"><font color="#000000">»</font> <a href="http://www.oregonlive.com/jobs">Interview in a Box Contest!</a><br>
+</td></tr>
 </tbody></table><img src="/images/spacer.gif" width="1" height="1" vspace="2"><br>
 <!--- OAS AD 'Sponsor1' begin -->
 <script language="JavaScript">
@@ -265,7 +255,7 @@ OAS_AD('TxtLink3');
 <td width="143"><a href="http://ads1.advance.net/RealMedia/ads/click_lx.ads/www.oregonlive.com/////Click/OREGONLIVE/OR_FOOTER/clck06.htm/" target="_blank"><img src="http://www.oregonlive.com/images/footer/oregonian_newspaperlogo.gif" width="143" height="33" border="0"></a></td>
 <td width="367"><font face="arial,sans-serif" size="2">Special home delivery offer for non-subscribers! Try us out for two weeks -- on us! <a href="http://ads1.advance.net/RealMedia/ads/click_lx.ads/www.oregonlive.com/////Click/OREGONLIVE/OR_FOOTER/clck07.htm/" target="_blank">Click Here!</a></font></td>
 </tr></tbody></table>
-<hr size="1" width="530" noshade=""><img src="http://www.oregonlive.com/images/spacer.gif" width="1" height="1" vspace="3"><br><a href="/aboutus/" target="_top">About Us</a> | <a href="/contactus/" target="_top">Help/Feedback</a> | <a href="/mediakit/" target="_top">Advertise With Us</a><br><img src="http://www.oregonlive.com/images/spacer.gif" width="1" height="1" vspace="1"><br>Use of this site constitutes acceptance of our <a href="/useragreement/" target="_top">User Agreement</a>. Please read our <a href="/privacypolicy/" target="_top">Privacy Policy</a>.<br>©2005 <a href="/" target="_top">OregonLive.com</a>. All Rights Reserved.</font><p><font face="arial,sans-serif" size="1"><table width="201" border="0" cellspacing="0" cellpadding="0">
+<hr size="1" width="530" noshade=""><img src="http://www.oregonlive.com/images/spacer.gif" width="1" height="1" vspace="3"><br><a href="/aboutus/" target="_top">About Us</a> | <a href="/contactus/" target="_top">Help/Feedback</a> | <a href="/mediakit/" target="_top">Advertise With Us</a><br><img src="http://www.oregonlive.com/images/spacer.gif" width="1" height="1" vspace="1"><br>Use of this site constitutes acceptance of our <a href="/useragreement/" target="_top">User Agreement</a>. Please read our <a href="/privacypolicy/" target="_top">Privacy Policy</a>.<br>©2006 <a href="/" target="_top">OregonLive.com</a>. All Rights Reserved.</font><p><font face="arial,sans-serif" size="1"><table width="201" border="0" cellspacing="0" cellpadding="0">
 <tbody><tr>
 <td width="100"><a href="http://www.advance.net/" target="_top"><img src="http://www.oregonlive.com/images/footer/advancelogo.gif" width="88" height="31" border="0"></a></td>
 <td width="1" bgcolor="#000000"><img src="http://www.oregonlive.com/images/spacer.gif" width="1" height="1"></td>
@@ -280,20 +270,17 @@ OAS_AD('TxtLink3');
 <td width="10"><img src="/images/spacer.gif" width="2" hspace="4" height="1"></td>
 <td width="195"><img src="/images/spacer.gif" width="1" hspace="97" height="1"></td></tr>
 </tbody></table>
-
-
 <map name="HNAVMAP">
-  <area shape="rect" coords="1,1,56,21" href="/">
-  <area shape="rect" coords="58,1,139,21" href="/news/">
-  <area shape="rect" coords="141,1,194,21" href="/local/">
-  <area shape="rect" coords="196,1,257,21" href="/sports/">
-  <area shape="rect" coords="259,1,328,21" href="/forums/">
-  <area shape="rect" coords="330,1,388,21" href="/living/">
-  <area shape="rect" coords="390,1,503,21" href="/entertainment/">
-  <area shape="rect" coords="505,1,566,21" href="/travel/">
-  <area shape="rect" coords="567,1,762,21" href="/classifieds/">
+<area shape="rect" coords="1,1,56,21" href="/">
+<area shape="rect" coords="58,1,139,21" href="/news/">
+<area shape="rect" coords="141,1,194,21" href="/local/">
+<area shape="rect" coords="196,1,257,21" href="/sports/">
+<area shape="rect" coords="259,1,328,21" href="/forums/">
+<area shape="rect" coords="330,1,388,21" href="/living/">
+<area shape="rect" coords="390,1,503,21" href="/entertainment/">
+<area shape="rect" coords="505,1,566,21" href="/travel/">
+<area shape="rect" coords="567,1,762,21" href="/classifieds/">
 </map>
-
 <map name="CNAVMAP">
 <area shape="RECT" coords="54,1,88,26" href="/jobs/" alt="Jobs">
 <area shape="RECT" coords="102,1,142,26" href="/autos/" alt="Shop for Autos">
@@ -302,12 +289,12 @@ OAS_AD('TxtLink3');
 <area shape="RECT" coords="56,59,141,69" href="/classifieds/" alt="All Classifieds">
 <area shape="RECT" coords="1,78,195,137" href="/shoporegon/" alt="Shop Oregon Live">
 </map>
-
 <div id="NAVSPAN" style="position: absolute; top: 146; left: 10; height: 23; width: 763">
 <layer width="763" height="23"><img src="http://www.oregonlive.com/dhtml/hnavbar_class/images/hz_nav_img.gif" usemap="#HNAVMAP" height="23" width="763" border="0"></layer></div>
 <div id="CLASSNAVSPAN" style="position: absolute; top: 169; left: 578; height: 137; width: 195" class="menucursor">
 <layer width="195" height="137" class="menucursor"><img src="http://www.oregonlive.com/dhtml/hnavbar_class/images/classified_links.gif" ismap="" usemap="#CNAVMAP" height="137" width="195" border="0"></layer></div>
 <script langauge="javascript" src="http://www.oregonlive.com/dhtml/hnavbar_class/scripts/hPosition.js"></script>
+
 <!--- OAS AD 'Popup' begin -->
 <script language="JavaScript">
 <!--
@@ -318,11 +305,11 @@ OAS_AD('Popup');
 
 
 <!-- Visual Sciences Extra Tracking -->
+<script language="javascript">
+if (_pdata){ sendpdata(); }
+</script>
 <script language="javascript" type="text/javascript"> 
   if ( (document.cookie).indexOf('v1st')>=0 && (document.cookie).indexOf('GTC=')<0 ) {
-    if ( (document.referrer).indexOf(document.domain)<0 ) { 
-    document.write('<img src="http://www.oregonlive.com/cgi-bin/stats/verify.cgi?Log=1&v1st=' + VSgetCookie('v1st') + '" border="0" width="1" height="1">'); 
-    }
-  } 
-</script> <noscript> <img src="http://www.oregonlive.com/cgi-bin/stats/verify.cgi?Log=1&javascript=false" border="0" width="1" height="1"> </noscript> 
+    if ( (document.referrer).indexOf(document.domain)<0 ) { document.write('<img src="http://www.oregonlive.com/cgi-bin/stats/verify.cgi?Log=1&v1st=' + VSgetCookie('v1st') + '" border="0" width="1" height="1">'); }
+} </script> <noscript> <img src="http://www.oregonlive.com/cgi-bin/stats/verify.cgi?Log=1&javascript=false" border="0" width="1" height="1"> </noscript> 
 </body></html>
