--- a/r/ri/rid/rider.edu.html
+++ b/r/ri/rid/rider.edu.html
@@ -1,7 +1,7 @@
-<!--The following is the downloaded HTML source of the rider.edu privacy policy that was archived on 2005-12-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051210173049id_/http%3A//www.rider.edu/1327.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the rider.edu privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615032055id_/http%3A//www.rider.edu/1327.htm) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/1999/REC-html401-19991224/loose.dtd"><html lang="en"><head><!-- PageID 1327 - published by RedDot 6.1 - 6.1.1.23 - 12904 -->
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/1999/REC-html401-19991224/loose.dtd"><html lang="en"><head><!-- PageID 1327 - published by RedDot 6.5 - 6.5.2.14 - 12904 -->
 <meta http-equiv="content-type" content="text/html; charset=iso-8859-1">
 <title>Rider University - Privacy Policy Foundation</title>
 <meta name="author" content="Nick Villa">
@@ -35,11 +35,11 @@ All Rights Reserved, 2004, 2005, 2006+ . . .
 <table width="773" border="0" cellspacing="0" cellpadding="0" align="left">
 
 <tbody><tr>
-<td valign="middle" align="right" colspan="3"><table border="0" cellspacing="0" cellpadding="0"><tbody><tr><td valign="middle" class="hm_head"><a href="/1330.htm" class="head">Get Directions</a> | <a href="http://www.rider.edu/calendar/month.php" class="head" target="_blank">Calendars</a> | <a href="http://directory.rider.edu/" class="head" target="_blank">Campus Directory</a> | <a href="http://library.rider.edu" class="head" target="_blank">Libraries</a> | <a href="http://webmail.rider.edu" class="head" target="_blank">Web Mail</a><img src="/Images/spacer.gif" height="1" width="10" border="0" alt=""></td>
+<td valign="middle" align="right" colspan="3"><table border="0" cellspacing="0" cellpadding="0"><tbody><tr><td valign="middle" class="hm_head"><a href="/1330.htm" class="head">Get Directions</a> | <a href="http://www.rider.edu/calendar/" class="head" target="_blank">Calendars</a> | <a href="http://directory.rider.edu/" class="head" target="_blank">Campus Directory</a> | <a href="http://library.rider.edu" class="head" target="_blank">Libraries</a> | <a href="http://webmail.rider.edu" class="head" target="_blank">Web Mail</a><img src="/Images/spacer.gif" height="1" width="10" border="0" alt=""></td>
 <td>
 <select name="quicklinks" onchange="document.location.href = this.options[this.selectedIndex].value;">
 <option value="">QUICK LINKS</option>
-<option value="http://www.rider.edu/2564_3205.htm">Bookstore</option><option value="http://www.rider.edu/139_2370.htm">Commencement 2005</option><option value="http://www.rider.edu/139_1310.htm">Construction Progress</option><option value="http://www.rider.edu/172_3169.htm">Majors &amp; Programs</option><option value="http://www.rider.edu/newsroom">Newsroom</option><option value="http://www.rider.edu/orientation">Orientation</option><option value="http://www.rider.edu/2556_2894.htm">Rider Jobs</option><option value="http://www.rider.edu/160_86.htm">Student Financial Services</option><option value="http://www.rider.edu/2526_2653.htm">Transcripts</option><option value="http://www.rider.edu/284_61.htm">Visit Rider</option><option value="http://www.rider.edu/284.htm">Westminster Home</option><option value="#">---------------------------</option><option value="#">FOR RIDER COMMUNITY</option><option value="http://blackboard.rider.edu">Blackboard</option><option value="http://easypass.rider.edu">Easypass</option><option value="http://www.rider.edu/myinfo">MyInfo / WebAdvisor</option><option value="http://www.rider.edu/registrar">Registrar</option><option value="http://www.rider.edu/technology">Technology</option><option value="http://webmail.rider.edu">WebMail</option>
+<option value="http://www.rider.edu/2530_3203.htm">Bookstores</option><option value="http://www.rider.edu/139_4325.htm">Commencement</option><option value="http://www.rider.edu/172_5719.htm">Majors &amp; Programs</option><option value="http://www.rider.edu/newsroom">Newsroom</option><option value="http://www.rider.edu/orientation">Orientation</option><option value="http://rider.peopleadmin.com">Rider Jobs</option><option value="http://www.rider.edu/160_86.htm">Student Financial Services</option><option value="http://www.rider.edu/2526_2653.htm">Transcripts</option><option value="http://www.rider.edu/139_61.htm">Visit Rider</option><option value="http://www.rider.edu/284.htm">Westminster Home</option><option value="#">---------------------------</option><option value="#">FOR RIDER COMMUNITY</option><option value="http://blackboard.rider.edu">Blackboard</option><option value="http://easypass.rider.edu">Easypass</option><option value="http://www.rider.edu/myinfo">MyInfo / WebAdvisor</option><option value="http://www.rider.edu/registrar">Registrar</option><option value="http://www.rider.edu/technology">Technology</option><option value="http://www.rider.edu/2526_5935.htm">Tutortrac</option><option value="http://webmail.rider.edu/">Webmail</option>
 </select>
 </td>
 </tr></tbody></table>
@@ -154,7 +154,7 @@ if(flashinstalled==2 && flashversion >= 6) { document.write('<object classid="cl
 <!--Footer-->
 </tbody></table><table width="580" border="0" cellspacing="0" cellpadding="0">
 <tbody><tr><td class="footer">
-<p class="footer"><a href="/1334.htm" class="footer">Contact Us</a> | <!--<a href="#" class="footer">Site Map</a> | --><a href="http://www.rider.edu/2556_2894.htm" class="footer" target="_blank">Rider Jobs</a> | <a href="/1327.htm" class="footer">Privacy Policy</a></p>
+<p class="footer"><a href="/1334.htm" class="footer">Contact Us</a> | <!--<a href="#" class="footer">Site Map</a> | --><a href="http://rider.peopleadmin.com" class="footer" target="_blank">Rider Jobs</a> | <a href="/1327.htm" class="footer">Privacy Policy</a></p>
 <p class="footer"><strong>Rider University<br>Lawrenceville - 2083 Lawrenceville Road | Lawrenceville, NJ 08648
 <br>Princeton - 101 Walnut Lane | Princeton, NJ 08540
 <br>Phone: (609) 896-5000 (Main) | (800) 257-9026 (Admissions)</strong></p>
