--- a/h/ho/hos/hostasaurus.com.html
+++ b/h/ho/hos/hostasaurus.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the hostasaurus.com privacy policy that was archived on 2005-12-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051223184044id_/http%3A//hostasaurus.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the hostasaurus.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615032117id_/http%3A//hostasaurus.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
   <script language="JAVASCRIPT" type="TEXT/JAVASCRIPT">
@@ -34,7 +34,8 @@ function describeFeature(imagjpg) {
 	<table border="0" cellpadding="0" cellspacing="0" width="100%">
   		<tbody><tr>
     	  
-    <td bgcolor="#6B367F" colspan="2"><a href="http://www.hostasaurus.com/"><img src="images/title_bar.jpg" alt="Hostasaurus Web Hosting with Dino Power" border="0"></a></td>  
+    <td bgcolor="#6B367F" colspan="1"><a href="http://www.hostasaurus.com/"><img src="images/title_bar.jpg" alt="Hostasaurus Web Hosting with Dino Power" border="0"></a></td>  
+<td bgcolor="#6B367F" align="right"><a href="http://www.jmhonline.net/mvregister" target="_blank"><img src="http://www.jmhonline.net/miva-user-groups/texas/images/2006Conference/conference-small.gif" border="0" width="235" height="60" alt="Texas Miva User Conference"></a></td>
   		</tr>
  		<tr>
     	  <td bgcolor="#FFFFFF" colspan="2"><img src="images/spacer.gif" height="1" width="1" border="0" alt=""></td>    
@@ -73,13 +74,16 @@ function describeFeature(imagjpg) {
 								</td> 
 							</tr>
 
-							<tr> <td class="tblborder2" bgcolor="#6B367F" align="right"><span class="textb"><a href="domains.php">&nbsp;Domain Names&nbsp;</a></span></td> </tr>
-<tr> <td class="tblborder2" bgcolor="#6B367F" align="right"><span class="textb"><a href="hosting.php">&nbsp;Shared Hosting&nbsp;</a></span></td> </tr>
+							<tr> <td class="tblborder2" bgcolor="#6B367F" align="right"><span class="textb"><a href="hosting.php">&nbsp;Shared Hosting&nbsp;</a></span></td> </tr>
 <tr> <td class="tblborder2" bgcolor="#6B367F" align="right"><span class="textb"><a href="dedicated.php">&nbsp;Dedicated Hosting&nbsp;</a></span></td> </tr>
 <tr> <td class="tblborder2" bgcolor="#6B367F" align="right"><span class="textb"><a href="cart.php">&nbsp;&nbsp;MIVA Merchant</a></span><br>
-	<hr width="60%"><span class="textbsm"><a href="scanalert.php">&nbsp;&nbsp;ScanAlert HackerSafe</a></span><br>
-	<span class="textbsm"><a href="payment.php">&nbsp;&nbsp;Payment Gateways</a></span><br>
-	<span class="textbsm"><a href="http://secure.hostasaurus.com/merchant.mv?Screen=CTGY&amp;Store_Code=DINO&amp;Category_Code=SSL">&nbsp;&nbsp;SSL Certificates</a></span></td> </tr>
+	<hr width="70%">
+	<span class="textbsm"><a href="http://secure.hostasaurus.com/merchant.mv?Screen=CTGY&amp;Store_Code=DINO&amp;Category_Code=SSL">&nbsp;&nbsp;SSL Certificates</a></span><br>
+	<span class="textbsm"><a href="/payment.php">&nbsp;&nbsp;Payflow Gateway</a></span><br>
+	<span class="textbsm"><a href="/payquake">&nbsp;&nbsp;PayQuake Gateway</a></span><br>
+	<span class="textbsm"><a href="/scanalert.php">&nbsp;&nbsp;ScanAlert HackerSafe</a></span><br>
+	</td> </tr>
+<tr> <td class="tblborder2" bgcolor="#6B367F" align="right"><span class="textb"><a href="domains.php">&nbsp;Domain Names&nbsp;</a></span></td> </tr>
 <tr> <td class="tblborder2" bgcolor="#6B367F" align="right"><span class="textb"><a href="lists.php">&nbsp;List Hosting&nbsp;</a></span></td> </tr>
 <tr> <td class="tblborder2" bgcolor="#6B367F" align="right"><span class="textb"><a href="email.php">&nbsp;Email Hosting&nbsp;</a></span></td> </tr>
 <tr> <td class="tblborder2" bgcolor="#6B367F" align="right"><span class="textb"><a href="dns.php">&nbsp;DNS Services&nbsp;</a></span></td> </tr>
@@ -88,7 +92,7 @@ function describeFeature(imagjpg) {
 <tr> <td class="tblborder2" bgcolor="#6B367F" align="right"><span class="textb"><a href="mailto:sales@hostasaurus.com">&nbsp;Contact Sales&nbsp;</a></span><br>
 	<span class="textbsm"><a href="mailto:sales@hostasaurus.com">sales@hostasaurus.com</a></span><br>
 	<span class="textbsm"><nobr>Phone: 877-DINO-POWER</nobr></span><br>
-	<span class="textbsm">(877-346-6769 US&amp;CA /<br> 813-971-8772 INTL)</span></td> </tr>
+	<span class="textbsm">(877-346-6769 US&amp;CA /<br> 813-217-4570 INTL)</span></td> </tr>
 
 						</tbody></table>
 						<center>
@@ -190,7 +194,7 @@ function describeFeature(imagjpg) {
 </tbody></table>
 <br>
 <center>
-  <span class="nav"><a href="http://www.hostasaurus.com/">Copyright 2000-2004 Hostasaurus, Inc.</a><br>Your IP is: 209.237.238.177</span> 
+  <span class="nav"><a href="http://www.hostasaurus.com/">Copyright 2000-2006 Hostasaurus, Inc.</a><br>Your IP is: 209.237.238.235</span> 
   <p>
 
 </p></center>
